<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:id="@+id/add_friend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_friends"
        android:id="@+id/list_friends"
        android:layout_below="@+id/add_friend"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_friends"
        android:id="@+id/search_friend"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/list_friends"
        android:layout_alignStart="@+id/list_friends" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/search_friend"
        android:layout_alignStart="@+id/search_friend" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/name"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText" />


</RelativeLayout>
