<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="exercise6.id11723222.com.exercise6.AddFriendDataActivity">

    <!-- ADD FRIEND -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:id="@+id/add_friend"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />
    <!-- Cancel -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_action"
        android:layout_alignTop="@+id/add_friend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/name"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText1"
        android:layout_alignBottom="@+id/occupation"
        android:layout_toRightOf="@+id/occupation"
        android:layout_toEndOf="@+id/occupation" />



    <!-- OCCUPATION -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/occupation"
        android:id="@+id/occupation"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- CITY -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/city"
        android:id="@+id/city"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/occupation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignBottom="@+id/city"
        android:layout_toRightOf="@+id/occupation"
        android:layout_toEndOf="@+id/occupation" />




</RelativeLayout>
